src/objects/ErrorLog__c.object
<CustomObject>
    <description>Stores the Error Log of the failed records</description>
    <fields>
        <fullName>BatchError__c</fullName>
        <label>BatchError</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchResult__c</fullName>
        <label>BatchResult</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalCorrelationId__c</fullName>
        <description>Contains Contact Id and Last modified date</description>
        <label>ExternalCorrelationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsBatchProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBatchProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Level__c</fullName>
        <description>Stores the Severity of the Log</description>
        <label>Log Level</label>
        <picklist>
            <picklistValues>
                <fullName>TRACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEBUG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WARN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FATAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Message_Short__c</fullName>
        <externalId>true</externalId>
        <label>Message Short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Stores the message</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether to notify to Admin or not</description>
        <label>Notify Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestId__c</fullName>
        <label>RequestId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterName__c</fullName>
        <label>RequesterName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResultCode__c</fullName>
        <label>ResultCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Contact_Id__c</fullName>
        <description>Store the SF Contact Id</description>
        <externalId>true</externalId>
        <label>SF Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <description>Stores the name of the SObject</description>
        <label>SObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceTime__c</fullName>
        <label>ServiceTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Stores the type of the Operation</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Territory Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DML Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webservice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Callouts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Async Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webservice (MDM) - Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webservice (MDM) - Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ErrorLog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SF_Contact_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>ExternalCorrelationId__c</columns>
        <columns>Log_Level__c</columns>
        <columns>Message__c</columns>
        <columns>Message_Short__c</columns>
        <columns>SObject__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>ExternalCorrelationId__c</columns>
        <columns>Log_Level__c</columns>
        <columns>Message__c</columns>
        <columns>Message_Short__c</columns>
        <columns>Notify_Admin__c</columns>
        <columns>RequesterName__c</columns>
        <columns>RequestId__c</columns>
        <columns>ResultCode__c</columns>
        <columns>ServiceTime__c</columns>
        <columns>SF_Contact_Id__c</columns>
        <columns>SObject__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ExternalCorrelationId__c</columns>
        <columns>Log_Level__c</columns>
        <columns>Message__c</columns>
        <columns>Message_Short__c</columns>
        <columns>RequesterName__c</columns>
        <columns>RequestId__c</columns>
        <columns>ResultCode__c</columns>
        <columns>ServiceTime__c</columns>
        <columns>SF_Contact_Id__c</columns>
        <columns>SObject__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ErrorLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>